Minor spacing fix for home page description at smaller sizes

--- a/style-responsive.css
+++ b/style-responsive.css
@@ -6,6 +6,8 @@
 @media (max-width: 767px) {
 	#header { margin-left: 0; }
 	
+	#home .description { margin-top: 10px; }
+	
 	#below-the-fold { margin-left: 0; }
 	#below-the-fold .span4 { width: 100%; margin-left: 0; margin-bottom: 20px; }
 	
